# butler-portugal

./: Cargo.toml  README.md  ROADMAP.md
.github/workflows/: rust.yml
benches/: bench.rs
examples/: basic.rs
examples/c/: example.c
include/: butler_portugal.h
src/: canonicalization.rs  error.rs  ffi.rs  index.rs  lib.rs  schreier_sims.rs  symmetry.rs  tensor.rs  young_tableaux.rs
tests/: advanced_relativity.rs  canonicalize.rs  integration_tests.rs  relativity_tensors.rs  robustness.rs  stress.rs  young_tableux.rs
