[package]
name = "butler-portugal"
version = "0.1.0"
edition = "2021"
authors = ["Stephen Diehl"]
description = "A Rust library implementing the Butler-Portugal algorithm for tensor canonicalization"
readme = "README.md"
repository = "https://github.com/sdiehl/butler-portugal"
license = "MIT"
keywords = ["physics", "tensor", "canonicalization", "symmetry", "relativity"]
categories = ["science", "mathematics"]

[dependencies]

[dev-dependencies]

[[example]]
name = "basic_usage"
path = "examples/basic_usage.rs"

[lib]
name = "butler_portugal"
path = "src/lib.rs"
